--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string-array name="nav_items">
+        <item>"My Shows"</item>
+        <item>"Find Shows"</item>
+        <item>"Settings"</item>
+    </string-array>
+
+    <string-array name="nav_icons">
+        <item>@drawable/ic_action_computer</item>
+        <item>@drawable/ic_action_computer</item>
+        <item>@drawable/ic_action_settings</item>
+    </string-array>
+
     <string name="app_name">Ketchup</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_login">LoginActivity</string>
