--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
         <item>"My Shows"</item>
         <item>"Find Shows"</item>
         <item>"Settings"</item>
+        <item>"Log Out"</item>
     </string-array>
 
     <string-array name="nav_icons">
