--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,6 @@
         <item>"Settings"</item>
         <item>"Log Out"</item>
     </string-array>
-
     <string-array name="nav_icons">
         <item>@drawable/ic_action_computer</item>
         <item>@drawable/ic_action_computer</item>
@@ -33,5 +32,6 @@
     <string name="settings">Settings</string>
     <string name="retype_password_prompt">retype password</string>
     <string name="row_icon_description">row icon</string>
+    <string name="title_activity_search">SearchActivity</string>
 
 </resources>
