--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,14 +9,14 @@
     </string-array>
     <string-array name="nav_icons">
         <item>@drawable/ic_action_computer</item>
-        <item>@drawable/ic_action_computer</item>
+        <item>@drawable/ic_action_search</item>
         <item>@drawable/ic_action_settings</item>
     </string-array>
 
     <string name="app_name">Ketchup</string>
     <string name="action_settings">Settings</string>
+    <string name="action_search">Search</string>
     <string name="title_activity_login">LoginActivity</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_home">HomeActivity</string>
     <string name="drawer_open">open</string>
     <string name="drawer_close">close</string>
@@ -33,5 +33,6 @@
     <string name="retype_password_prompt">retype password</string>
     <string name="row_icon_description">row icon</string>
     <string name="title_activity_search">SearchActivity</string>
+    <string name="search_hint">Search…</string>
 
 </resources>
