--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,5 +34,7 @@
     <string name="row_icon_description">row icon</string>
     <string name="title_activity_search">SearchActivity</string>
     <string name="search_hint">Search…</string>
+    <string name="title_activity_show_info">ShowInfoActivity</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
